cabal-version:      2.4
name:               tapi
version:            0.1.0.0
maintainer:         benjaminstwo@gmail.com
author:             natserract
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Tapi
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        bytestring >=0.10.4.0 && <1.0,
        data-accessor >=0.2.3

executable tapi
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        tapi
